--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
   <name>irobot</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="my_email@email.com">MY NAME</maintainer>
+  <maintainer email="etangofman@email.com">Meteor</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
